--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -33,13 +33,73 @@ h1, h2, h3, h4, p {
 }
 
 .campania-wrapper {
-  display: grid;
-  grid-template-columns: 2fr 1fr;
+  margin-top: 20px;
+}
+.campania-wrapper .campania-first {
+  display: flex;
   gap: 20px;
 }
-.campania-wrapper .campania-item {
-  border: 1px solid black;
-  height: 300px;
+.campania-wrapper .campania-first .campania-item {
+  border-radius: 8px;
+  padding: 70px 0;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.campania-wrapper .campania-first .campania-item:nth-child(1) {
+  flex: 7;
+  background-image: url(https://ecommarcejs.netlify.app/img/campaigns/banner1.png);
+}
+.campania-wrapper .campania-first .campania-item:nth-child(2) {
+  flex: 4;
+  background-image: url(https://ecommarcejs.netlify.app/img/campaigns/banner2.png);
+}
+.campania-wrapper .campania-second {
+  display: flex;
+  gap: 20px;
+  margin-top: 20px;
+}
+.campania-wrapper .campania-second .campania-item {
+  border-radius: 8px;
+  padding: 70px 0;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.campania-wrapper .campania-second .campania-item:nth-child(1) {
+  flex: 4;
+  background-image: url(https://ecommarcejs.netlify.app/img/campaigns/banner4.png);
+}
+.campania-wrapper .campania-second .campania-item:nth-child(2) {
+  flex: 7;
+  background-image: url(https://ecommarcejs.netlify.app/img/campaigns/banner3.png);
+}
+.campania-wrapper h1 {
+  color: white;
+  font-size: 20px;
+  width: 200px;
+  padding: 10px 20px;
+  font-family: "Jost", sans-serif;
+}
+.campania-wrapper .subtitle {
+  color: white;
+  font-size: 14px;
+  width: 250px;
+  padding: 10px 20px;
+  font-family: "Jost", sans-serif;
+}
+
+@media (max-width: 992px) {
+  .campania-first,
+  .campania-second {
+    flex-direction: column;
+    gap: 20px;
+  }
+  .campania-first .campania-item,
+  .campania-second .campania-item {
+    flex: none;
+    width: 100%;
+  }
 }
 .card {
   background-color: #d6e4e5;
@@ -676,30 +736,11 @@ header .container .header-wrapper .header-right .left-menu .cart .count {
   grid-template-columns: repeat(4, 1fr);
   column-gap: 40px;
 }
-.category-products .container .products .slider-buttons {
-  width: 100%;
-  display: flex;
-  top: 50%;
-  position: absolute;
-  justify-content: space-between;
-}
-.category-products .container .products .slider-buttons .chevron {
-  width: 40px;
-  height: 40px;
-  font-size: 20px;
-  border-radius: 100%;
-  border: none;
-  opacity: 0.4;
-  background-color: #497174;
-  cursor: pointer;
-}
-.category-products .container .products .slider-buttons .chevron:hover {
-  opacity: 1;
-  background-color: #497174;
-  transition: background-color 0.3s;
-  color: white;
-}
-.category-products .container .campania-wrapper {
-  width: 100%;
-  border: 1px solid black;
+
+@media only screen and (max-width: 768px) {
+  .category-products .container .products .product {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+  }
 }/*# sourceMappingURL=main.css.map */
