--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -21,15 +21,90 @@ h1, h2, h3, h4, p {
   margin: 0;
 }
 
+.blog {
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  border-radius: 6px;
+}
+.blog .blog-img {
+  overflow: hidden;
+  border-radius: 6px;
+}
+.blog .blog-img img {
+  width: 100%;
+}
+.blog .blog-detail {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  gap: 20px;
+  margin: 15px 0px;
+  font-family: "Jost", sans-serif;
+}
+.blog .blog-detail .date {
+  color: #9EACB2;
+}
+.blog .blog-detail .subtitle {
+  color: #112B3C;
+  font-size: 18px;
+  font-weight: 600;
+}
+.blog .blog-detail .more a {
+  font-weight: 600;
+  border-bottom: 2px solid #739294;
+  color: #739294;
+  padding: 3px;
+}
+
+.brand {
+  transition: 0.2s ease all;
+  opacity: 0.4;
+}
+.brand:hover {
+  opacity: 1;
+}
+
 .btns {
   width: 130px;
   height: 50px;
   font-family: "Jost", sans-serif;
   border: none;
   border-radius: 5px;
-  background-color: #53787B;
+  background-color: #53787b;
   font-size: 15px;
   color: white;
+}
+
+.slider-button {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  position: absolute;
+  top: 200px;
+}
+.slider-button .chevron {
+  width: 40px;
+  height: 40px;
+  font-size: 20px;
+  border-radius: 100%;
+  border: none;
+  opacity: 0.4;
+  cursor: pointer;
+  background-color: #497174;
+}
+.slider-button .chevron:hover {
+  opacity: 1;
+  background-color: orangered;
+  transition: background-color 0.3s;
+  color: white;
+}
+
+.campaign-click {
+  border: 1px solid black;
+  padding: 8px 100px;
+  border: none;
+  margin-left: 20px;
+  font-family: "Jost", sans-serif;
+  border-radius: 5px;
 }
 
 .campania-wrapper {
@@ -89,7 +164,7 @@ h1, h2, h3, h4, p {
   font-family: "Jost", sans-serif;
 }
 
-@media (max-width: 992px) {
+@media (max-width: 768px) {
   .campania-first,
   .campania-second {
     flex-direction: column;
@@ -736,11 +811,46 @@ header .container .header-wrapper .header-right .left-menu .cart .count {
   grid-template-columns: repeat(4, 1fr);
   column-gap: 40px;
 }
+.category-products .container .blogs {
+  display: flex;
+  gap: 25px;
+  padding: 40px 0;
+}
+.category-products .container .brands {
+  display: flex;
+  justify-content: space-around;
+  padding: 35px 0px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 50px;
+  background-color: #EFF5F5;
+  border-radius: 6px;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+.category-products .discount-sticker {
+  background-image: url(https://ecommarcejs.netlify.app/img/single-campaign.png);
+  border: 1px solid black;
+  padding: 240px;
+  background-attachment: fixed;
+  display: flex;
+  justify-content: center;
+}
+.category-products .discount-sticker .detail {
+  color: white;
+}
+.category-products .a {
+  height: 500px;
+}
 
 @media only screen and (max-width: 768px) {
   .category-products .container .products .product {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 20px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .category-products .container .blogs {
+    display: flex;
+    flex-wrap: wrap;
   }
 }/*# sourceMappingURL=main.css.map */
