--- a/assets/style/sass/main.scss
+++ b/assets/style/sass/main.scss
@@ -1,4 +1,6 @@
 @use "./base/reset";
+@use "./components/blog";
+@use "./components/brands";
 @use "./components/buttons";
 @use "./components/campania-item";
 @use "./components/card";
