--- a/assets/style/sass/pages/_home.scss
+++ b/assets/style/sass/pages/_home.scss
@@ -22,44 +22,61 @@
         grid-template-columns: repeat(4, 1fr);
         column-gap: 40px;
       }
-      // .slider-buttons {
-      //   width: 100%;
-      //   display: flex;
-      //   top: 50%;
-      //   position: absolute;
-      //   justify-content: space-between;
-
-      //   .chevron {
-      //     width: 40px;
-      //     height: 40px;
-      //     font-size: 20px;
-      //     border-radius: 100%;
-      //     border: none;
-      //     opacity: 0.4;
-      //     background-color: #497174;
-      //     cursor: pointer;
-
-      //     &:hover {
-      //       opacity: 1;
-      //       background-color: #497174;
-      //       transition: background-color 0.3s;
-      //       color: white;
-      //     }
-      //   }
-      // }
+    }
+    .blogs {
+      display: flex;
+      gap: 25px;
+      padding: 40px 0;
+    }
+    .brands {
+      display: flex;
+      justify-content: space-around;
+      padding: 35px 0px;
+      box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 50px;
+      background-color: #EFF5F5;
+      border-radius: 6px;
+      flex-wrap: wrap;
+      gap: 10px;
+    }
+  }
+  .discount-sticker{
+   
+    background-image: url(https://ecommarcejs.netlify.app/img/single-campaign.png);
+   border: 1px solid black ;
+  
+   padding: 240px;
+    background-attachment: fixed;
+    display: flex;
+    justify-content: center;
+    .detail{
+    
+      color: white;
+    }
+  
+  }
+  .a{
+    height: 500px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .category-products {
+    .container {
+      .products {
+        .product {
+          display: grid;
+          grid-template-columns: 1fr 1fr;
+          gap: 20px;
+        }
+      }
     }
   }
 }
-@media only screen and (max-width:768px){
-  .category-products{
-    .container{
-      .products{
-        .product{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 20px;
-
-  }
+@media only screen and (max-width: 768px) {
+  .category-products {
+    .container {
+      .blogs {
+        display: flex;
+        flex-wrap: wrap;
       }
     }
   }
