--- a/assets/style/sass/pages/_home.scss
+++ b/assets/style/sass/pages/_home.scss
@@ -33,28 +33,41 @@
       justify-content: space-around;
       padding: 35px 0px;
       box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 50px;
-      background-color: #EFF5F5;
+      background-color: #eff5f5;
       border-radius: 6px;
       flex-wrap: wrap;
       gap: 10px;
     }
   }
-  .discount-sticker{
-   
+  .discount-sticker {
+    margin-top: 30px;
     background-image: url(https://ecommarcejs.netlify.app/img/single-campaign.png);
-   border: 1px solid black ;
-  
-   padding: 240px;
+    padding: 160px;
     background-attachment: fixed;
+    color: white;
+    font-family: "Jost", sans-serif;
     display: flex;
-    justify-content: center;
-    .detail{
-    
-      color: white;
+    align-items: center;
+    flex-direction: column;
+
+    h1 {
+      font-weight: 300;
+      font-size: 25px;
+      text-transform: uppercase;
     }
-  
+    .percent {
+      font-size: 60px;
+      font-weight: 700;
+    }
+    .line {
+      background-color: white;
+      width: 50px;
+      border: 1px solid white;
+      text-align: center;
+      height: 7px;
+    }
   }
-  .a{
+  .a {
     height: 500px;
   }
 }
