policy and footer up added

--- a/assets/style/sass/pages/_home.scss
+++ b/assets/style/sass/pages/_home.scss
@@ -67,8 +67,10 @@
       height: 7px;
     }
   }
-  .a {
-    height: 500px;
+  .policy {
+    margin-top: 40px;
+    border: 1px solid #dee0da;
+   
   }
 }
 @media only screen and (max-width: 768px) {
