--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -616,6 +616,33 @@ nav .menu i {
     row-gap: 20px;
   }
 }
+.policy-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 30px 0;
+  gap: 10px;
+}
+.policy-list .policy-item {
+  display: flex;
+  gap: 15px;
+}
+.policy-list .policy-item i {
+  display: flex;
+  font-size: 40px;
+  align-items: center;
+  color: #112B3C;
+}
+.policy-list .policy-item .policy-text {
+  display: flex;
+  flex-direction: column;
+  color: #112B3C;
+  font-family: "Jost", sans-serif;
+}
+.policy-list .policy-item .policy-text strong {
+  font-size: 14px;
+}
+
 .slider {
   width: 100%;
   position: relative;
@@ -695,6 +722,90 @@ nav .menu i {
     display: none;
   }
 }
+.footer {
+  background-color: #112b3c;
+}
+.footer .footer-up .container .footerUp-wrapper {
+  padding: 60px 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.footer .footer-up .container .footerUp-wrapper .footerUp {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+.footer .footer-up .container .footerUp-wrapper .footerUp .footerUp-top {
+  font-family: "Jost", sans-serif;
+}
+.footer .footer-up .container .footerUp-wrapper .footerUp .footerUp-top .titles {
+  font-size: 30px;
+  max-width: 400px;
+  color: #eff5f5;
+}
+.footer .footer-up .container .footerUp-wrapper .footerUp .footerUp-top .subtitles {
+  font-size: 15px;
+}
+.footer .footer-up .container .footerUp-wrapper .footerUp .footerUp-top .titles-right {
+  font-size: 30px;
+  max-width: 236px;
+  color: #eff5f5;
+}
+.footer .footer-up .container .footerUp-wrapper .footerUp .footerUp-top .subtitles {
+  color: #8c9ba3;
+}
+.footer .footer-up .container .footerUp-wrapper .footerUp .footerUp-bottom {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+.footer .footer-up .container .footerUp-wrapper .footerUp .footerUp-bottom .img {
+  display: flex;
+  margin-top: 40px;
+  gap: 15px;
+}
+.footer .footer-up .container .footerUp-wrapper .footerUp .footerUp-bottom .img .app-store {
+  height: 42px;
+}
+.footer .footer-up .container .footerUp-wrapper .footerUp .footerUp-bottom .img .google-play {
+  margin-top: 3px;
+  height: 36px;
+}
+.footer .footer-up .container .footerUp-wrapper .footerUp .footerUp-bottom form {
+  display: flex;
+}
+.footer .footer-up .container .footerUp-wrapper .footerUp .footerUp-bottom form input {
+  width: 100%;
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 8px;
+  border: 1px solid #d6e4e5;
+  text-indent: 15px;
+}
+.footer .footer-up .container .footerUp-wrapper .footerUp .footerUp-bottom form input::placeholder {
+  font-size: 15px;
+  font-family: "Jost", sans-serif;
+}
+.footer .footer-up .container .footerUp-wrapper .footerUp .footerUp-bottom form .subscribe {
+  padding: 15px 50px;
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+  background-color: #eff5f5;
+  border: none;
+  border: 1px solid #d6e4e5;
+  font-family: "Jost", sans-serif;
+  color: #497174;
+}
+.footer .footer-up .container .footerUp-wrapper .footerUp .footerUp-bottom form .subscribe:hover {
+  background-color: #497174;
+  color: white;
+}
+.footer .footer-up .container .footerUp-wrapper .footerUp .footerUp-bottom .subtitles {
+  color: #8c9ba3;
+  font-size: 13px;
+  font-family: "Jost", sans-serif;
+}
+
 header {
   border: 1px solid #d6e4e5;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px;
@@ -867,8 +978,9 @@ header .container .header-wrapper .header-right .left-menu .cart .count {
   text-align: center;
   height: 7px;
 }
-.category-products .a {
-  height: 500px;
+.category-products .policy {
+  margin-top: 40px;
+  border: 1px solid #dee0da;
 }
 
 @media only screen and (max-width: 768px) {
