--- a/assets/style/sass/main.scss
+++ b/assets/style/sass/main.scss
@@ -7,6 +7,8 @@
 @use "./components/categorie-item";
 @use "./components/dropdown";
 @use "./components/modal-search";
+@use "./components/policy";
 @use "./components/slider";
+@use "./layout/footer";
 @use "./layout/header";
-@use "./pages/home"
+@use "./pages/home";
