--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -24,6 +24,7 @@ h1, h2, h3, h4, p {
 .blog {
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   border-radius: 6px;
+  width: 360px;
 }
 .blog .blog-img {
   overflow: hidden;
@@ -1013,8 +1014,10 @@ header .container .header-wrapper .header-right .left-menu .cart .count {
 }
 .category-products .container .blogs {
   display: flex;
+  flex-wrap: wrap;
   gap: 25px;
   padding: 40px 0;
+  justify-content: space-between;
 }
 .category-products .container .brands {
   display: flex;
@@ -1069,5 +1072,6 @@ header .container .header-wrapper .header-right .left-menu .cart .count {
   .category-products .container .blogs {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
   }
 }/*# sourceMappingURL=main.css.map */
