--- a/assets/style/sass/pages/_home.scss
+++ b/assets/style/sass/pages/_home.scss
@@ -25,8 +25,10 @@
     }
     .blogs {
       display: flex;
+      flex-wrap: wrap;
       gap: 25px;
       padding: 40px 0;
+      justify-content: space-between;
     }
     .brands {
       display: flex;
@@ -92,6 +94,7 @@
       .blogs {
         display: flex;
         flex-wrap: wrap;
+       justify-content: center;
       }
     }
   }
