--- a/assets/style/sass/layout/_header.scss
+++ b/assets/style/sass/layout/_header.scss
@@ -31,6 +31,9 @@ header {
         font-family: "Jost", sans-serif;
         font-weight: 600;
         color: #112b3c;
+        a{
+          color: #112b3c;
+        }
       }
 
       .header-right {
