--- a/assets/style/sass/main.scss
+++ b/assets/style/sass/main.scss
@@ -5,6 +5,7 @@
 @use "./components/campania-item";
 @use "./components/card";
 @use "./components/categorie-item";
+@use "./components/contact";
 @use "./components/dropdown";
 @use "./components/modal-search";
 @use "./components/policy";
