--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -339,11 +339,71 @@ h1, h2, h3, h4, p {
   max-width: 980px;
   font-size: 14px;
 }
-.contact .container .contact-title .contact-wrapper .contact-left label {
+.contact .container .contact-title .contact-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 80px;
+}
+.contact .container .contact-title .contact-wrapper .contact-left {
+  width: 50%;
+}
+.contact .container .contact-title .contact-wrapper .contact-left .form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.contact .container .contact-title .contact-wrapper .contact-left .form label {
   font-family: "Jost", sans-serif;
   font-size: 13px;
 }
+.contact .container .contact-title .contact-wrapper .contact-left .form .name-email {
+  display: flex;
+  gap: 10px;
+}
+.contact .container .contact-title .contact-wrapper .contact-left .form .name-email input {
+  width: 100%;
+  padding: 10px;
+  border: none;
+}
+.contact .container .contact-title .contact-wrapper .contact-left .form .subject input {
+  width: 100%;
+  padding: 10px 0;
+  border: none;
+  text-indent: 1;
+}
+.contact .container .contact-title .contact-wrapper .contact-left .form .mesagge textarea {
+  width: 100%;
+  height: 50px;
+  border: none;
+}
+.contact .container .contact-title .contact-wrapper .contact-left .form .msg {
+  font-family: "Jost", sans-serif;
+  padding: 10px 20px;
+  width: 150px;
+  color: white;
+  font-size: 15px;
+  border-radius: 5px;
+  border: none;
+  background-color: #497174;
+}
+.contact .container .contact-title .contact-wrapper .contact-right h1 {
+  font-size: 15px;
+  text-transform: uppercase;
+  font-weight: 500;
+}
+.contact .container .contact-title .contact-wrapper .contact-right p {
+  margin-top: 10px;
+  font-size: 13px;
+}
+.contact .container .contact-title .contact-wrapper .contact-right .open {
+  margin-top: 10px;
+}
 
+@media only screen and (max-width: 768px) {
+  .contact .container .contact-title .contact-wrapper .contact-left {
+    width: 100%;
+  }
+}
 nav .toggle {
   display: none;
 }
