--- a/assets/style/sass/components/_contact.scss
+++ b/assets/style/sass/components/_contact.scss
@@ -1,30 +1,104 @@
 .contact {
   .container {
-    
-      .contact-title {
-        font-family: "Jost", sans-serif;
+    .contact-title {
+      font-family: "Jost", sans-serif;
 
-        h4{
-          color: orangered;
-          font-size: 20px;
-          font-weight: 500;
-        }
-        h2 {
-          font-weight: 500;
-          text-transform: uppercase;
-        }
-        .contact-subtitle{
-            max-width: 980px;
-            font-size: 14px;
-        }
-      
+      h4 {
+        color: orangered;
+        font-size: 20px;
+        font-weight: 500;
+      }
+      h2 {
+        font-weight: 500;
+        text-transform: uppercase;
+      }
+      .contact-subtitle {
+        max-width: 980px;
+        font-size: 14px;
+      }
+
       .contact-wrapper {
-      .contact-left{
-        label{
-            font-family: "Jost", sans-serif;
-            font-size: 13px;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 80px;
+
+        .contact-left {
+          width: 50%;
+          .form {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+            label {
+              font-family: "Jost", sans-serif;
+              font-size: 13px;
+            }
+            .name-email {
+              display: flex;
+              gap: 10px;
+
+              input {
+                width: 100%;
+                padding: 10px;
+                border: none;
+              }
+            }
+            .subject {
+              input {
+                width: 100%;
+                padding: 10px 0;
+                border: none;
+                text-indent: 1;
+              }
+            }
+            .mesagge {
+              textarea {
+                width: 100%;
+                height: 50px;
+                border: none;
+              }
+            }
+            .msg {
+              font-family: "Jost", sans-serif;
+              padding: 10px 20px;
+              width: 150px;
+              color: white;
+              font-size: 15px;
+              border-radius: 5px;
+              border: none;
+              background-color: #497174;
+            }
+          }
+        }
+        .contact-right {
+       
+          h1 {
+            font-size: 15px;
+            text-transform: uppercase;
+            font-weight: 500;
+          }
+          p{
+          margin-top: 10px;
+          font-size: 13px;
+
+        }
+        .open{
+        margin-top: 10px;
+      }
+    }
+  }
+}
+}
+}
+@media only screen and (max-width: 768px) {
+  .contact {
+    .container {
+      .contact-title {
+        .contact-wrapper {
+          .contact-left {
+           width: 100%;
+          }
         }
       }
     }
-  }}
+  }
 }
