--- a/assets/style/sass/components/_policy.scss
+++ b/assets/style/sass/components/_policy.scss
@@ -1,26 +1,26 @@
-.policy-list{
+.policy-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 30px 0;
+  gap: 10px;
+  .policy-item {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    padding: 30px 0;
-    gap: 10px;
-    .policy-item{
-display: flex;
-gap: 15px;
-i{
-    display: flex;
-    font-size: 40px;
-    align-items: center;
-    color: #112B3C;
-}
-.policy-text{
-   display: flex;
-   flex-direction: column;
-    color: #112B3C;
-    font-family: "Jost", sans-serif;
-    strong{
+    gap: 15px;
+    i {
+      display: flex;
+      font-size: 40px;
+      align-items: center;
+      color: #112b3c;
+    }
+    .policy-text {
+      display: flex;
+      flex-direction: column;
+      color: #112b3c;
+      font-family: "Jost", sans-serif;
+      strong {
         font-size: 14px;
+      }
     }
-}
-    }
+  }
 }
