--- a/assets/style/sass/pages/_contact.scss
+++ b/assets/style/sass/pages/_contact.scss
@@ -18,6 +18,7 @@
       }
 
       .contact-wrapper {
+        padding: 40px 0;
         display: flex;
         flex-wrap: wrap;
         gap: 120px;
