detail page info

--- a/assets/style/sass/components/_dropdown.scss
+++ b/assets/style/sass/components/_dropdown.scss
@@ -144,7 +144,7 @@ nav {
 }
 
 @media only screen and (max-width: 768px) {
-  nav {
+  .center {
     background-color: white;
     width: 200px;
     height: 100%;
