--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -494,7 +494,7 @@ nav .menu i {
 }
 
 @media only screen and (max-width: 768px) {
-  nav {
+  .center {
     background-color: white;
     width: 200px;
     height: 100%;
@@ -506,19 +506,19 @@ nav .menu i {
     background-color: #eff5f5;
     border-right: 2px solid #d6e4e5;
   }
-  nav .toggle {
+  .center .toggle {
     display: flex;
     justify-content: end;
     margin-top: 15px;
     margin-right: 15px;
     font-size: 18px;
   }
-  nav .menu {
+  .center .menu {
     display: block;
     margin-top: 30px;
     margin-left: 70px;
   }
-  nav .menu i {
+  .center .menu i {
     display: none;
   }
 }
@@ -1156,36 +1156,36 @@ header .container .header-wrapper .header-right .left-menu .cart .count {
     width: 100%;
   }
 }
-.detail .container .breadcrumb {
-  border: 1px solid black;
-}
-.detail .container .breadcrumb nav {
+.detail .container .breadcrumb .breadcrumb-navigation {
   padding: 20px 0;
 }
-.detail .container .breadcrumb nav ul {
+.detail .container .breadcrumb .breadcrumb-navigation ul {
   display: flex;
+  flex-wrap: wrap;
   gap: 5px;
 }
-.detail .container .breadcrumb nav ul li {
+.detail .container .breadcrumb .breadcrumb-navigation ul li {
+  display: flex;
+  flex-wrap: wrap;
   font-family: "Jost", sans-serif;
   font-size: 13px;
 }
-.detail .container .breadcrumb nav ul li a {
+.detail .container .breadcrumb .breadcrumb-navigation ul li a {
   color: black;
 }
-.detail .container .breadcrumb nav ul li a:hover {
+.detail .container .breadcrumb .breadcrumb-navigation ul li a:hover {
   text-decoration: underline;
 }
-.detail .container .breadcrumb nav ul li:not(:last-child):after {
+.detail .container .breadcrumb .breadcrumb-navigation ul li:not(:last-child):after {
   content: "/";
   margin-left: 5px;
 }
 .detail .container .detail-wrapper {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
 }
 .detail .container .detail-wrapper .product-image {
-  border: 1px solid black;
   width: 30%;
 }
 .detail .container .detail-wrapper .product-image .img {
@@ -1193,7 +1193,6 @@ header .container .header-wrapper .header-right .left-menu .cart .count {
 }
 .detail .container .detail-wrapper .product-image .product-images {
   display: flex;
-  border: 1px solid black;
   width: 100%;
   justify-content: space-between;
   gap: 10px;
@@ -1202,8 +1201,8 @@ header .container .header-wrapper .header-right .left-menu .cart .count {
   width: 29.4117647059%;
 }
 .detail .container .detail-wrapper .product-detail {
-  width: 65%;
-  border: 1px solid black;
+  padding: 0px 25px;
+  width: 70%;
   font-family: "Jost", sans-serif;
 }
 .detail .container .detail-wrapper .product-detail h1 {
@@ -1218,7 +1217,7 @@ header .container .header-wrapper .header-right .left-menu .cart .count {
   display: flex;
 }
 .detail .container .detail-wrapper .product-detail .reviews .stars .star {
-  color: #FFD700;
+  color: #ffd700;
   font-size: 13px;
 }
 .detail .container .detail-wrapper .product-detail .reviews .review {
@@ -1231,20 +1230,144 @@ header .container .header-wrapper .header-right .left-menu .cart .count {
   font-size: 20px;
 }
 .detail .container .detail-wrapper .product-detail .product-prices s {
-  opacity: 0.6;
+  color: #D6E4E5;
 }
 .detail .container .detail-wrapper .product-detail .description {
   font-size: 14px;
   display: flex;
   margin-top: 10px;
 }
-.detail .container .detail-wrapper .product-detail .color .blue {
-  border: 1px solid black;
-  width: 20px;
-  height: 20px;
+.detail .container .detail-wrapper .product-detail .colors {
+  margin-top: 10px;
+}
+.detail .container .detail-wrapper .product-detail .colors .color-form {
+  display: flex;
+  margin-top: 10px;
+}
+.detail .container .detail-wrapper .product-detail .colors .color-form .color-wrapper {
+  display: flex;
+  border: 1px solid transparent;
+  width: 35px;
+  height: 35px;
+  border-radius: 100%;
+  padding: 4px;
+  transition: 0.3s ease all;
+}
+.detail .container .detail-wrapper .product-detail .colors .color-form .color-wrapper:hover {
+  border-color: #eb6440;
+}
+.detail .container .detail-wrapper .product-detail .colors .color-form .color-wrapper .input-color {
+  width: 100%;
+  height: 100%;
   border-radius: 100%;
 }
+.detail .container .detail-wrapper .product-detail .colors .color-form .color-wrapper .input-color input {
+  appearance: none;
+}
+.detail .container .detail-wrapper .product-detail .colors .color-form .color-wrapper .blue {
+  background-color: #2563eb;
+}
+.detail .container .detail-wrapper .product-detail .colors .color-form .color-wrapper .dark-blue {
+  background-color: #112b3c;
+}
+.detail .container .detail-wrapper .product-detail .colors .color-form .color-wrapper .red {
+  background-color: red;
+}
+.detail .container .detail-wrapper .product-detail .colors .color-form .color-wrapper .teal {
+  background-color: #497174;
+}
+.detail .container .detail-wrapper .product-detail .colors .color-form .color-wrapper .orange {
+  background-color: #eb6440;
+}
+.detail .container .detail-wrapper .product-detail .colors .color-form .active {
+  border-color: #eb6440;
+}
+.detail .container .detail-wrapper .product-detail .sizes {
+  margin-top: 10px;
+}
+.detail .container .detail-wrapper .product-detail .sizes .size-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+.detail .container .detail-wrapper .product-detail .sizes .size-wrapper .size {
+  border: 1px solid black;
+  padding: 6px 35px;
+  border-color: #dee0ea;
+  border-radius: 5px;
+  transition: 0.3s ease all;
+}
+.detail .container .detail-wrapper .product-detail .sizes .size-wrapper .size:hover {
+  background-color: #eb6440;
+  color: white;
+}
+.detail .container .detail-wrapper .product-detail .sizes .size-wrapper .active {
+  background-color: #eb6440;
+  color: white;
+}
+.detail .container .detail-wrapper .product-detail .product-cart {
+  margin-top: 25px;
+}
+.detail .container .detail-wrapper .product-detail .product-cart .product-count-form {
+  display: flex;
+  gap: 10px;
+}
+.detail .container .detail-wrapper .product-detail .product-cart .product-count-form input {
+  width: 80px;
+  padding: 10px 0;
+  border: none;
+  text-indent: 10px;
+}
+.detail .container .detail-wrapper .product-detail .product-cart .product-count-form .add-btn {
+  width: 100%;
+  padding: 10px 0;
+  border: none;
+  font-family: "Jost", sans-serif;
+  color: white;
+  background-color: #eb6440;
+  transition: 0.3s ease all;
+}
+.detail .container .detail-wrapper .product-detail .product-cart .product-count-form .add-btn:hover {
+  background-color: #112B3C;
+}
+.detail .container .detail-wrapper .product-detail .product-cart .product-link {
+  margin-top: 25px;
+  display: flex;
+  gap: 10px;
+}
+.detail .container .detail-wrapper .product-detail .product-cart .product-link a {
+  color: gray;
+  font-size: 12px;
+}
+.detail .container .detail-wrapper .product-detail .product-cart .dvider {
+  border-bottom: 4px solid #E5E7EB;
+  margin-top: 35px;
+  width: 100%;
+}
+.detail .container .detail-wrapper .product-detail .product-cart .product-extra {
+  margin-top: 15px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.detail .container .detail-wrapper .product-detail .product-cart .product-extra span {
+  color: gray;
+}
+.detail .container .detail-wrapper .product-detail .product-cart .product-extra strong {
+  font-weight: 500;
+}
 
+@media only screen and (max-width: 768px) {
+  .detail .container .detail-wrapper .product-image {
+    width: 100%;
+  }
+  .detail .container .detail-wrapper .product-detail {
+    width: 100%;
+  }
+  .detail .container .detail-wrapper .product-detail .sizes .size-wrapper .size {
+    padding: 6px 20px;
+  }
+}
 .section {
   width: 100%;
   background-color: #eff5f5;
