--- a/assets/style/sass/pages/_detail.scss
+++ b/assets/style/sass/pages/_detail.scss
@@ -1,99 +1,236 @@
-.detail{
-    .container{
-        .breadcrumb{
-            border: 1px solid black;
-            nav{
-                padding: 20px 0;
-                ul{
-                    display: flex;
-                   gap: 5px;
-                    li{
-                         font-family: "Jost", sans-serif;
-                         font-size: 13px;
-                        a{
-                           color: black;
-                           &:hover{
-    text-decoration: underline;
-} 
-                        }
-&:not(:last-child):after{
-    content: "/";
-    margin-left: 5px;
-   
-}  
-      }
-                }
-            }
-        }
-        .detail-wrapper{
+.detail {
+  .container {
+    .breadcrumb {
+      .breadcrumb-navigation {
+        padding: 20px 0;
+        ul {
+          display: flex;
+          flex-wrap: wrap;
+          gap: 5px;
+          li {
             display: flex;
-           justify-content: space-between;
-            .product-image{
-                border: 1px solid black;
-                width: 30%;
-                .img{
-                    width: 100%;
+            flex-wrap: wrap;
+            font-family: "Jost", sans-serif;
+            font-size: 13px;
+            a {
+              color: black;
+              &:hover {
+                text-decoration: underline;
+              }
+            }
+            &:not(:last-child):after {
+              content: "/";
+              margin-left: 5px;
+            }
+          }
+        }
+      }
+    }
+    .detail-wrapper {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+    
+      .product-image {
+        width: 30%;
+       
+        .img {
+          width: 100%;
+        }
+        .product-images {
+          display: flex;
+
+          width: 100%;
+          justify-content: space-between;
+          gap: 10px;
+          img {
+            width: calc(100% / 3.4);
+          }
+        }
+      }
+      .product-detail {
+        padding: 0px 25px;
+        width: 70%;
+
+        font-family: "Jost", sans-serif;
+
+        h1 {
+          font-weight: 600;
+        }
+        .reviews {
+          padding: 8px 0;
+          display: flex;
+          gap: 15px;
+          .stars {
+            display: flex;
+            .star {
+              color: #ffd700;
+              font-size: 13px;
+            }
+          }
+          .review {
+            font-size: 13px;
+            opacity: 0.6;
+          }
+        }
+        .product-prices {
+          display: flex;
+          gap: 15px;
+          font-size: 20px;
+          s {
+            color: #D6E4E5;
+          }
+        }
+        .description {
+          font-size: 14px;
+          display: flex;
+          margin-top: 10px;
+        }
+        .colors {
+          margin-top: 10px;
+          .color-form {
+            display: flex;
+            margin-top: 10px;
+            .color-wrapper {
+              display: flex;
+              border: 1px solid transparent;
+              width: 35px;
+              height: 35px;
+              border-radius: 100%;
+              padding: 4px;
+              transition: 0.3s ease all;
+
+              &:hover {
+                border-color: #eb6440;
+              }
+              .input-color {
+                width: 100%;
+                height: 100%;
+                border-radius: 100%;
+                input {
+                  appearance: none;
                 }
-                .product-images{
-                    display: flex;
-                    border:1px solid black;
-                   width: 100%;
-                   justify-content: space-between;
-                   gap: 10px;
-                    img{
-                        width: calc(100% / 3.4);
+              }
+              .blue {
+                background-color: #2563eb;
+              }
+              .dark-blue {
+                background-color: #112b3c;
+              }
+              .red {
+                background-color: red;
+              }
+              .teal {
+                background-color: #497174;
+              }
+              .orange {
+                background-color: #eb6440;
+              }
+            }
+            .active {
+              border-color: #eb6440;
+            }
+          }
+        }
+        .sizes{
+            margin-top: 10px;
+            .size-wrapper{
+                display: flex;
+                flex-wrap: wrap;
+                gap: 20px;
+                .size{
+                    border: 1px solid black;
+                    padding: 6px 35px;
+                    border-color:#dee0ea;
+                    border-radius: 5px;
+                    transition: .3s ease all;
+                    &:hover{
+                        background-color: #eb6440;
+                        color: white;
                     }
+                }
+                .active{
+                    background-color: #eb6440;
+                    color: white;
                 }
             }
-            .product-detail{
-                width: 65%;
-                border:1px solid black;
-                font-family: "Jost", sans-serif;
-
-                h1{
-                    font-weight: 600;
+            
+        }
+        .product-cart{
+            margin-top: 25px;
+            .product-count-form{
+                display: flex;
+                gap: 10px;
+                input{
+                    width: 80px;
+                    padding: 10px 0;
+                    border: none;
+                    text-indent: 10px;
                 }
-                .reviews{
-                    padding: 8px 0;
-                    display: flex;
-                    gap: 15px;
-                    .stars{
-                    display: flex;
-                    .star{
-                    color: #FFD700;
-                        font-size: 13px;
-                    }
+                .add-btn{
+                    width: 100%;
+                     padding: 10px 0;
+                     border: none;
+                      font-family: "Jost", sans-serif;
+                      color: white;
+                     background-color: #eb6440;
+                      transition: .3s ease all;
+                     &:hover{
+                       
+                        background-color: #112B3C;
+                     }
                 }
-                .review{
-font-size: 13px;
-opacity: 0.6;
-
+            }
+            .product-link{
+                margin-top: 25px;
+                display: flex;
+                gap: 10px;
+                a{
+                    color: gray;
+                    font-size: 12px;
                 }
+            }
+            .dvider{
+                border-bottom: 4px solid #E5E7EB;
+                margin-top: 35px;
+                width: 100%;
+            }
+            .product-extra{
+                margin-top: 15px;
+                display: flex;
+                flex-direction: column;
+                gap: 10px;
+                span{
+                    color: gray;
                 }
-                .product-prices{
-                    display: flex;
-                   gap: 15px;
-                    font-size: 20px;
-                    s{
-                        opacity: 0.6;
-                    }
-                }
-                .description{
-                    font-size: 14px;
-                    display: flex;
-                    margin-top: 10px;
-                    
-                }
-                .color{
-                    .blue{
-                        border: 1px solid black;
-                        width: 20px;
-                        height: 20px;
-                        border-radius: 100%;
-                    }
+                strong{
+                  font-weight: 500;
                 }
             }
         }
-
+      }
     }
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .detail {
+    .container {
+      .detail-wrapper {
+        .product-image {
+          width: 100%;
+        }
+        .product-detail {
+          width: 100%;
+          .sizes{
+            .size-wrapper{
+              .size{
+                padding: 6px 20px
+              }
+            }
+          }
+        }
+      }
+    }
+  }
 }
