--- a/assets/style/sass/main.scss
+++ b/assets/style/sass/main.scss
@@ -10,6 +10,7 @@
 @use "./components/modal-search";
 @use "./components/policy";
 @use "./components/slider";
+@use "./components/table";
 @use "./layout/footer";
 @use "./layout/header";
 @use "./pages/account";
