--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -1230,7 +1230,7 @@ header .container .header-wrapper .header-right .left-menu .cart .count {
   font-size: 20px;
 }
 .detail .container .detail-wrapper .product-detail .product-prices s {
-  color: #D6E4E5;
+  color: #d6e4e5;
 }
 .detail .container .detail-wrapper .product-detail .description {
   font-size: 14px;
@@ -1328,7 +1328,7 @@ header .container .header-wrapper .header-right .left-menu .cart .count {
   transition: 0.3s ease all;
 }
 .detail .container .detail-wrapper .product-detail .product-cart .product-count-form .add-btn:hover {
-  background-color: #112B3C;
+  background-color: #112b3c;
 }
 .detail .container .detail-wrapper .product-detail .product-cart .product-link {
   margin-top: 25px;
@@ -1340,7 +1340,7 @@ header .container .header-wrapper .header-right .left-menu .cart .count {
   font-size: 12px;
 }
 .detail .container .detail-wrapper .product-detail .product-cart .dvider {
-  border-bottom: 4px solid #E5E7EB;
+  border-bottom: 4px solid #e5e7eb;
   margin-top: 35px;
   width: 100%;
 }
@@ -1355,6 +1355,67 @@ header .container .header-wrapper .header-right .left-menu .cart .count {
 }
 .detail .container .detail-wrapper .product-detail .product-cart .product-extra strong {
   font-weight: 500;
+}
+.detail .container .tab-button {
+  margin-top: 35px;
+}
+.detail .container .tab-button .tab-btn {
+  display: flex;
+  gap: 20px;
+  font-family: "Jost", sans-serif;
+}
+.detail .container .tab-button .tab-btn li a {
+  color: #112b3c;
+  font-weight: 500;
+}
+.detail .container .tab-button .dvider {
+  border-bottom: 4px solid #e5e7eb;
+  margin-top: 25px;
+  width: 100%;
+}
+.detail .container .tab-panel {
+  font-family: "Jost", sans-serif;
+  margin-top: 20px;
+}
+.detail .container .tab-panel .tab-info .tab-table {
+  margin-top: 15px;
+  border-collapse: collapse;
+}
+.detail .container .tab-panel .tab-info .tab-table tr th,
+.detail .container .tab-panel .tab-info .tab-table tr td {
+  text-align: start;
+  padding: 10px 20px;
+  border: 1px solid #dee0ea;
+}
+.detail .container .tab-panel .tab-reviews .comments {
+  margin-top: 15px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+.detail .container .tab-panel .tab-reviews .comments .comment-item {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.detail .container .tab-panel .tab-reviews .comments .comment-item .comment-img img {
+  border-radius: 50%;
+}
+.detail .container .tab-panel .tab-reviews .comments .comment-item .comment-detail {
+  display: flex;
+  flex-direction: column;
+  row-gap: 5px;
+}
+.detail .container .tab-panel .tab-reviews .comments .comment-item .comment-detail .stars {
+  display: flex;
+  font-size: 12px;
+  color: #FFD700;
+}
+.detail .container .tab-panel .tab-reviews .comments .comment-item .comment-detail .comment-name {
+  font-size: 12px;
+}
+.detail .container .tab-panel .tab-reviews .comments .comment-item .comment-detail .comment-des {
+  font-size: 14px;
 }
 
 @media only screen and (max-width: 768px) {
@@ -1443,14 +1504,13 @@ header .container .header-wrapper .header-right .left-menu .cart .count {
 }
 
 @media only screen and (max-width: 768px) {
-  .category-products .container .products .product {
+  .section .container .products .product {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 20px;
   }
 }
 @media only screen and (max-width: 768px) {
-  .category-products .container .blogs {
+  .section .container .blogs {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
