--- a/assets/style/sass/pages/_detail.scss
+++ b/assets/style/sass/pages/_detail.scss
@@ -30,10 +30,10 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
-    
+
       .product-image {
         width: 30%;
-       
+
         .img {
           width: 100%;
         }
@@ -78,7 +78,7 @@
           gap: 15px;
           font-size: 20px;
           s {
-            color: #D6E4E5;
+            color: #d6e4e5;
           }
         }
         .description {
@@ -132,81 +132,153 @@
             }
           }
         }
-        .sizes{
-            margin-top: 10px;
-            .size-wrapper{
-                display: flex;
-                flex-wrap: wrap;
-                gap: 20px;
-                .size{
-                    border: 1px solid black;
-                    padding: 6px 35px;
-                    border-color:#dee0ea;
-                    border-radius: 5px;
-                    transition: .3s ease all;
-                    &:hover{
-                        background-color: #eb6440;
-                        color: white;
-                    }
-                }
-                .active{
-                    background-color: #eb6440;
-                    color: white;
-                }
+        .sizes {
+          margin-top: 10px;
+          .size-wrapper {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+            .size {
+              border: 1px solid black;
+              padding: 6px 35px;
+              border-color: #dee0ea;
+              border-radius: 5px;
+              transition: 0.3s ease all;
+              &:hover {
+                background-color: #eb6440;
+                color: white;
+              }
             }
-            
+            .active {
+              background-color: #eb6440;
+              color: white;
+            }
+          }
         }
-        .product-cart{
+        .product-cart {
+          margin-top: 25px;
+          .product-count-form {
+            display: flex;
+            gap: 10px;
+            input {
+              width: 80px;
+              padding: 10px 0;
+              border: none;
+              text-indent: 10px;
+            }
+            .add-btn {
+              width: 100%;
+              padding: 10px 0;
+              border: none;
+              font-family: "Jost", sans-serif;
+              color: white;
+              background-color: #eb6440;
+              transition: 0.3s ease all;
+              &:hover {
+                background-color: #112b3c;
+              }
+            }
+          }
+          .product-link {
             margin-top: 25px;
-            .product-count-form{
-                display: flex;
-                gap: 10px;
-                input{
-                    width: 80px;
-                    padding: 10px 0;
-                    border: none;
-                    text-indent: 10px;
-                }
-                .add-btn{
-                    width: 100%;
-                     padding: 10px 0;
-                     border: none;
-                      font-family: "Jost", sans-serif;
-                      color: white;
-                     background-color: #eb6440;
-                      transition: .3s ease all;
-                     &:hover{
-                       
-                        background-color: #112B3C;
-                     }
-                }
+            display: flex;
+            gap: 10px;
+            a {
+              color: gray;
+              font-size: 12px;
             }
-            .product-link{
-                margin-top: 25px;
-                display: flex;
-                gap: 10px;
-                a{
-                    color: gray;
-                    font-size: 12px;
-                }
+          }
+          .dvider {
+            border-bottom: 4px solid #e5e7eb;
+            margin-top: 35px;
+            width: 100%;
+          }
+          .product-extra {
+            margin-top: 15px;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+            span {
+              color: gray;
             }
-            .dvider{
-                border-bottom: 4px solid #E5E7EB;
-                margin-top: 35px;
-                width: 100%;
+            strong {
+              font-weight: 500;
             }
-            .product-extra{
-                margin-top: 15px;
-                display: flex;
-                flex-direction: column;
-                gap: 10px;
-                span{
-                    color: gray;
-                }
-                strong{
-                  font-weight: 500;
-                }
+          }
+        }
+      }
+    }
+    .tab-button {
+      margin-top: 35px;
+      .tab-btn {
+        display: flex;
+        gap: 20px;
+        font-family: "Jost", sans-serif;
+        li {
+          a {
+            color: #112b3c;
+            font-weight: 500;
+          }
+        }
+      }
+      .dvider {
+        border-bottom: 4px solid #e5e7eb;
+        margin-top: 25px;
+        width: 100%;
+      }
+    }
+    .tab-panel {
+      font-family: "Jost", sans-serif;
+      margin-top: 20px;
+
+      .tab-info {
+        .tab-table {
+          margin-top: 15px;
+          border-collapse: collapse;
+          tr {
+            th,
+            td {
+              text-align: start;
+              padding: 10px 20px;
+              border: 1px solid #dee0ea;
             }
+          }
+        }
+      }
+      .tab-reviews {
+        .comments {
+          margin-top: 15px;
+          display: flex;
+          flex-direction: column;
+          gap: 30px;
+          .comment-item {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            .comment-img {
+              img {
+                border-radius: 50%;
+              }
+            }
+           .comment-detail{
+            display: flex;
+            flex-direction: column;
+            row-gap: 5px;
+             .stars{
+              display: flex;
+              font-size: 12px;
+              color: #FFD700;
+              
+            }
+            .comment-name{
+              font-size: 12px;
+            }
+            .comment-des{
+              font-size: 14px;
+            }
+
+           }
+          }
         }
       }
     }
@@ -222,10 +294,10 @@
         }
         .product-detail {
           width: 100%;
-          .sizes{
-            .size-wrapper{
-              .size{
-                padding: 6px 20px
+          .sizes {
+            .size-wrapper {
+              .size {
+                padding: 6px 20px;
               }
             }
           }
