--- a/assets/style/sass/pages/_home.scss
+++ b/assets/style/sass/pages/_home.scss
@@ -75,20 +75,20 @@
   }
 }
 @media only screen and (max-width: 768px) {
-  .category-products {
+  .section{
     .container {
       .products {
         .product {
           display: grid;
           grid-template-columns: 1fr 1fr;
-          gap: 20px;
+         
         }
       }
     }
   }
 }
 @media only screen and (max-width: 768px) {
-  .category-products {
+  .section {
     .container {
       .blogs {
         display: flex;
